# record-impl

./: .ghci  ChangeLog.md  README.md  impl.cabal  record-impl.cabal  stack.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: haskell.yml
src/: Example.hs  Impl.hs
src/Impl/: TH.hs
test/: Example.hs  Spec.hs
