cabal-version: 1.12
name:           impl
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/parsonsmatt/impl#readme>
homepage:       https://github.com/parsonsmatt/impl#readme
bug-reports:    https://github.com/parsonsmatt/impl/issues
author:         Matt Parsons
maintainer:     parsonsmatt@gmail.com
copyright:      Matt Parsons
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/parsonsmatt/impl

library
  exposed-modules:
      Impl.TH
      Impl
      Example
  hs-source-dirs:
      src
  build-depends:
      base >=4.16 && <5
    , template-haskell
    , time
  default-language: Haskell2010

test-suite impl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_impl
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , impl
  default-language: Haskell2010
